# ur10e_hande_ros

hande_bringup/: CMakeLists.txt  package.xml
hande_bringup/launch/: hande_bringup.launch  hande_driver_minimal.launch  ur10e_hande.rviz  ur10e_hande_bringup.launch
hande_bringup/msg/: HandEGripperCommand.msg  HandEGripperStatus.msg
hande_bringup/scripts/: gripper_test.py  hande_driver.py  hande_driver_node.cpp  interactive_marker.py
hande_bringup/srv/: GripperControl.srv
robotiq_hande_description/: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  test.urdf
robotiq_hande_description/launch/: display.launch
robotiq_hande_description/rviz/: urdf.rviz
robotiq_hande_description/urdf/: materials.xacro  robotiq_hande_gripper.ros2_control.xacro  robotiq_hande_gripper.urdf.xacro  robotiq_hande_gripper.xacro  test_gripper.xacro
robotiq_hande_ros_driver/: CMakeLists.txt  package.xml
robotiq_hande_ros_driver/launch/: robotiq_hande_driver.launch
robotiq_hande_ros_driver/msg/: HandECommand.msg  HandEStatus.msg
robotiq_hande_ros_driver/scripts/: robotiq_hande_driver.py
robotiq_hande_ros_driver/src/: gripper_node.py  robotiq_gripper.py  robotiq_hande_client.cpp  robotiq_hande_client.h  robotiq_hande_driver.cpp  robotiq_hande_driver.h  robotiq_hande_driver_node.cpp  test.py
robotiq_hande_ros_driver/srv/: HandEGrip.srv  HandERelease.srv
test_package/: CMakeLists.txt  package.xml  setup.py
test_package/config/: poses.json
test_package/models/: target.stl
test_package/scripts/: main.py
test_package/scripts/구 버전/: history.py  mains.py  test.py  test_0307 (사본).py  test_0307.py
test_package/src/test_package/: __init__.py  camera_tab.py  gripper_controller.py  gui.py  multi_view_object_detection.py  pose_manager.py  robot_controller.py  socket_manager.py  socket_tab.py
ur10e_hande_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10e_hande_moveit_config/config/: cartesian_limits.yaml  fake_controllers.yaml  gazebo_ur10e_robotiq_hande.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur10e_robotiq_hande.srdf
ur10e_hande_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur10e_hande_moveit_config/urdf/: ur10e_robotiq_hande.urdf  ur10e_robotiq_hande.xacro
